--- a/大创项目进度规划.md
+++ b/大创项目进度规划.md
@@ -1,19 +1,19 @@
-# 大创项目进度规划
+# 大创项目暑期进度规划
 
-2022.5-2022.6 理论知识学习，模型合并
+第一周（6.21-6.26）：学习系统框架，跑模型实验
 
-2022.7 暑假
+第二周（6.27-7.03）：学习系统框架，跑模型实验
 
-2022.8 项目开题报告，模型合并（**开题报告ddl：9.1**）
+第三周（7.04-7.10）：搭建前端系统，学习后端框架
 
-2022.9 模型合并
+第四周（7.11-7.17）：优化前端系统，学习后端框架
 
-2022.10-12 验证模型效果，利用现有数据集进行实验，开始写研究论文
+第五周（7.18-7.24）：搭建后端系统，整合模型
 
-2023.1-2023.4 白内障图像复原系统的搭建
+第六周（7.25-7.31）：优化后端系统，整合模型
 
-2023.5-6 完成结题报告和研究论文
+第七周（8.01-8.07）：开题报告，模型实验
 
-2023.7 结题答辩
+第八周（8.08-8.14）：开题报告，模型实验
 
-论文计划使用sharelatex进行协作编写，采取分块的形式编写
+第九周（8.15-8.21）：将模型接入系统，优化系统
